# summarize-youtube

./: README.md  RECIPE.md  install_dev.sh  install_global.sh  pyproject.toml  summarize-youtube.ipynb  summary_of_video.md
summarize_youtube.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
